@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.464 2003-08-14 01:02:13 castaglia Exp $
+$Id: NEWS,v 1.465 2003-08-15 01:33:22 castaglia Exp $
 
 CVS
 ---------------------------------
@@ -57,6 +57,7 @@ CVS
   implemented in the support library (libsupp.a).
 - Bug 2144 - Rework autoconf handling of --enable-sia option.
 - Bug 2147 - Segmentation fault processing file in ASCII mode.
+- Fixed mod_ifsession's handling of multiple configuration sets.
 
 1.2.9rc1 - Released 15-May-2003
 ---------------------------------
